--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,7 @@ body{
     grid-template-areas: 'profile timeline';
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100vh;
+    scroll-behavior: smooth;
 }
 
 nav{
@@ -133,6 +134,32 @@ aside p {
 aside span {
     font-size: 0.75rem;
     color: #9e9ea0;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    bottom: 10px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    background-color: #633bbc;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.btn::after{
+    content: "↑";
+    font-size: 24px;
+    font-weight: 500;
+    color: #9e9ea0;
+    transition: margin-top 250ms;
+}
+
+.btn:hover::after{
+    margin-top: -8px;
 }
 
 @media (max-width:768px){
