--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@
     }
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     background-color: #121215;
     color:#eaeaea;
@@ -39,7 +43,7 @@ body{
     grid-template-areas: 'profile timeline';
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 100vh;
-    scroll-behavior: smooth;
+    
 }
 
 nav{
@@ -141,10 +145,10 @@ aside span {
     justify-content: center;
     align-items: center;
     position: fixed;
-    bottom: 10px;
+    bottom: 15px;
     right: 30px;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: #633bbc;
     text-decoration: none;
     border-radius: 5px;
